# kamela-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  shuttle_deploy.yml  shuttle_status.yml
src/: main.rs  weather.rs
