[package]
name = "kamela-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.197"
serenity = { version = "0.12.1", features = ["client", "gateway", "rustls_backend", "model", "builder", "http"] }
shuttle-runtime = "0.45"
shuttle-serenity = "0.45"
tokio = "1.37"
tracing = "0.1.40"
